Fix the updates bubble on dark mode and center the bubble.
The updates bubble has been updated to work correctly on dark mode. We
still use the same background color (utilizing the Ink warning alert
background color), but the text and link colors are fixed to look
correct on it.

The bubble is now centered horizontally, instead of off to the side.
This mirrors the design we've had in RBCommons for years, and helps keep
the bubble better in view on wide screens.

Testing Done:
Tested on light and dark modes.

Reviewed at https://reviews.reviewboard.org/r/13829/

--- a/reviewboard/static/rb/css/pages/review-request.less
+++ b/reviewboard/static/rb/css/pages/review-request.less
@@ -704,20 +704,23 @@
  ****************************************************************************/
 
 #updates-bubble {
-  background: @alert-color;
-  border-top: 1px #888866 solid;
-  border-left: 1px #888866 solid;
+  background: var(--ink-p-accent-warning-bg);
+  color: var(--ink-p-text-on-light-color);
+  border: 1px #888866 solid;
+  border-bottom: 0;
   bottom: 0;
-  border-radius: 10px 0 0 0;
-  box-shadow: -1px -1px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 10px 10px 0 0;
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.15);
   font-size: 110%;
   padding: 1em;
   position: fixed;
-  right: 0;
+  left: 50%;
+  right: auto;
+  transform: translateX(-50%);
   z-index: @z-index-page-overlay;
 
   a, a:visited {
-    color: #0000CC;
+    color: var(--ink-p-link-on-light-color);
     text-decoration: none;
   }
 
