--- a/reviewboard/static/rb/css/pages/reviews.less
+++ b/reviewboard/static/rb/css/pages/reviews.less
@@ -1536,34 +1536,6 @@
 
 
 /****************************************************************************
- * Updates Bubble
- ****************************************************************************/
-
-#updates-bubble {
-  background: #FFF1AB;
-  border-top: 1px #888866 solid;
-  border-left: 1px #888866 solid;
-  bottom: 0;
-  border-radius: 10px 0 0 0;
-  box-shadow: -1px -1px 2px rgba(0, 0, 0, 0.15);
-  font-size: 110%;
-  padding: 1em;
-  position: fixed;
-  right: 0;
-  z-index: @z-index-page-overlay;
-
-  a, a:visited {
-    color: #0000CC;
-    text-decoration: none;
-  }
-
-  #updates-bubble-buttons {
-    margin-left: 2em;
-  }
-}
-
-
-/****************************************************************************
  * Review Dialog
  ****************************************************************************/
 #review-form {
